Fix - Overlapping email validation error message

--- a/assets/css/everest-forms.scss
+++ b/assets/css/everest-forms.scss
@@ -212,8 +212,6 @@
 
 					&.everest-forms-invalid {
 						label {
-							white-space: nowrap;
-
 							&.evf-error {
 								color: $red;
 							}
